methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: value unary_! is not a member of Unit
while (!unMur())
       ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (!unMur())
^SlugTracking:12: warning: enclosing method unMur has result type Unit: return value discarded
return mur}
^