methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = { var devantVert : Boolean = false
    // Write your code here
while (!unMur())
{avance(); if (getCouleurSol()==Color.green) {devantVert = true}; recule()
	
                                return devantVert}} 	

def unMur() 
{var mur : Boolean = false
  if ( !estFaceMur() && !estDosMur() ) {mur=true}
return mur}

def chercherBiscuit() {while (!estSurBiscuit() ) 
                       {if (isFacingTrail) {avance()}
                        else {gauche()}}
                      prendBiscuit()}